[package]
name = "crosstermion"
version = "0.10.1"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "The unification of crossterm and termion behind a common facade for use with feature flags"
edition = "2018"
license = "MIT"
repository = "https://github.com/Byron/tui-crates"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[features]
default = []

color = ["ansi_term"]

input-async = ["futures-channel", "async-channel", "futures-lite", "futures-core" ]
input-async-crossterm = ["crossterm/event-stream", "input-async"]

tui-termion = ["ratatui", "tui-termion-backend", "termion"]
tui-react-termion = ["tui-react", "ratatui", "tui-termion-backend", "termion"]

tui-crossterm = ["ratatui", "tui-crossterm-backend", "crossterm"]
tui-react-crossterm = ["tui-react", "ratatui", "tui-crossterm-backend", "crossterm"]

tui-termion-backend = ["ratatui/termion"] # redirect is needed to allow us to #[cfg(feature = "…")] against it. You can't see features of crates
tui-crossterm-backend = ["ratatui/crossterm"]


[dependencies]
crossterm = { version = "0.26.1", optional = true, default-features = false }
termion = { version = "2.0.1", optional = true, default-features = false }
futures-channel = { version = "0.3.5", optional = true, default-features = false, features = ["std", "sink"] }
futures-core = { version = "0.3.5", optional = true, default-features = false }
futures-lite = { version = "1.4.0", optional = true }
ratatui = { version = "0.20.1", optional = true, default-features = false }
tui-react = { version = "^0.19.0", optional = true, default-features = false, path = "../tui-react" }
ansi_term = { version = "0.12.1", optional = true, default-features = false }
async-channel = { version = "1.1.1", optional = true }

[package.metadata.docs.rs]
all-features = true
