[package]
name = "crosstermion"
version = "0.12.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "The unification of crossterm and termion behind a common facade for use with feature flags"
edition = "2018"
license = "MIT"
repository = "https://github.com/Byron/tui-crates"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[features]
default = []

color = ["ansiterm"]

input-async = ["futures-channel", "async-channel", "futures-lite", "futures-core" ]
input-async-crossterm = ["crossterm/event-stream", "input-async"]

tui-termion = ["tui", "tui-termion-backend", "termion"]
tui-react-termion = ["tui-react", "tui", "tui-termion-backend", "termion"]

tui-crossterm = ["tui", "tui-crossterm-backend", "crossterm"]
tui-react-crossterm = ["tui-react", "tui", "tui-crossterm-backend", "crossterm"]

tui-termion-backend = ["tui/termion"] # redirect is needed to allow us to #[cfg(feature = "…")] against it. You can't see features of crates
tui-crossterm-backend = ["tui/crossterm"]


[dependencies]
crossterm = { version = "0.27.0", optional = true, default-features = false, features = ["events"] }
termion = { version = "2.0.1", optional = true, default-features = false }
futures-channel = { version = "0.3.5", optional = true, default-features = false, features = ["std", "sink"] }
futures-core = { version = "0.3.5", optional = true, default-features = false }
futures-lite = { version = "2.1.0", optional = true }
tui = { package = "ratatui", version = "0.24.0", optional = true, default-features = false }
tui-react = { version = "^0.21.0", optional = true, default-features = false, path = "../tui-react" }
ansiterm = { version = "0.12.2", optional = true, default-features = false }
async-channel = { version = "2.1.1", optional = true }

[target."cfg(windows)".dependencies]
crossterm = { version = "0.27.0", optional = true, default-features = false, features = ["windows"] }

[package.metadata.docs.rs]
all-features = true
