[package]
name = "crosstermion"
version = "0.12.1"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "utilities for `crossterm`, without ties to `termion`"
edition = "2018"
license = "MIT"
repository = "https://github.com/Byron/tui-crates"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[features]
default = []

color = ["ansiterm"]

input-async = ["futures-channel", "async-channel", "futures-lite", "futures-core" ]
input-async-crossterm = ["crossterm/event-stream", "input-async"]

tui-crossterm = ["tui", "tui-crossterm-backend", "crossterm"]
tui-react-crossterm = ["tui-react", "tui", "tui-crossterm-backend", "crossterm"]

tui-crossterm-backend = ["tui/crossterm"]


[dependencies]
crossterm = { version = "0.27.0", optional = true, default-features = false, features = ["events"] }
futures-channel = { version = "0.3.5", optional = true, default-features = false, features = ["std", "sink"] }
futures-core = { version = "0.3.5", optional = true, default-features = false }
futures-lite = { version = "2.1.0", optional = true }
tui = { package = "ratatui", version = "0.25.0", optional = true, default-features = false }
tui-react = { version = "^0.21.0", optional = true, default-features = false, path = "../tui-react" }
ansiterm = { version = "0.12.2", optional = true, default-features = false }
async-channel = { version = "2.1.1", optional = true }

[target."cfg(windows)".dependencies]
crossterm = { version = "0.27.0", optional = true, default-features = false, features = ["windows"] }

[package.metadata.docs.rs]
all-features = true
